# unhas-theses-scraper-classifier

./: .gitignore  LICENSE  README.md  config.yaml  main.py  pyproject.toml  scraping.ipynb
legacy/: README.md  cli_interface_original.py  config_settings_original.py  main_original.py  processing_data_processor_original.py  scraping_discovery_original.py
notebooks/legacy/: scraping.ipynb
output/: fakultas-matematika-dan-ilmu-peng-alam_statistika_20250731_023739.json  fakultas-matematika-dan-ilmu-peng-alam_statistika_classified_20250731_031703.json  fakultas-matematika-dan-ilmu-peng-alam_statistika_classified_20250731_101751.xlsx  fakultas-matematika-dan-ilmu-peng-alam_statistika_simplified_20250731_101242.json  fakultas-teknik_teknik-elektro_20250731_005816.json  fakultas-teknik_teknik-elektro_classified_20250731_015133.json  fakultas-teknik_teknik-elektro_classified_20250731_022652.xlsx  fakultas-teknik_teknik-elektro_classified_20250731_101714.xlsx  unhas_repository_classified_20250730_114427.json
output/20250730/: unhas_repository_20250730_004812.json
output/legacy/: unhas_repository_classified_20250730_122424.xlsx
src/classification/: classifier.py  service.py
src/cli/: interface.py  service.py
src/config/: service.py  settings.py
src/core/: __init__.py  abstractions.py  orchestrator.py  utils.py  webdriver.py
src/discovery/: service.py
src/processing/: data_processor.py  service.py
src/scraping/: discovery.py  scraper.py  service.py
