[project]
name = "unhas-statistics-theses-scraping"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Abdul Fathin Fawwaz", email = "abdulfathinfawwaz@gmail.com"},
]
dependencies = ["selenium>=4.34.2", "webdriver-manager>=4.0.2", "ipykernel>=6.30.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
