[project]
name = "unhas-theses-repository-scraping"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Abdul Fathin Fawwaz", email = "abdulfathinfawwaz@gmail.com"},
]
dependencies = ["selenium>=4.34.2", "webdriver-manager>=4.0.2", "ipykernel>=6.30.0", "google-generativeai>=0.8.5", "pandas>=2.3.1", "openpyxl>=3.1.5", "pyyaml>=6.0", "click>=8.0.0", "rich>=13.0.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
